Added Ignore config

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#Config
+TgBot\Config.cs
+
 # User-specific files
 *.rsuser
 *.suo
@@ -349,3 +352,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+TgBot/Config.cs
+TgBot/Config.cs
