Clean up ingored files

--- a/.gitignore
+++ b/.gitignore
@@ -352,5 +352,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-TgBot/Config.cs
-TgBot/Config.cs
+*Config.cs
